--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-netlify-cms": "^6.0.0",
-    "gatsby-plugin-purgecss": "^6.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sass": "^5.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-remark-copy-linked-files": "^5.0.0",
     "gatsby-remark-images": "^6.0.0",
@@ -44,7 +42,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^2.0.5"
+    "autoprefixer": "^10.4.2",
+    "gatsby-plugin-postcss": "^5.4.0",
+    "postcss": "^8.4.5",
+    "prettier": "^2.0.5",
+    "tailwindcss": "^3.0.12"
   },
   "engines": {
     "node": ">= 14.15.0"
