--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.2",
     "gatsby-plugin-postcss": "^5.4.0",
     "postcss": "^8.4.5",
