--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -50,17 +50,6 @@ collections:
           - { label: Image, name: image, widget: image }
           - { label: Heading, name: heading, widget: string }
           - {
-              label: Mainpitch,
-              name: mainpitch,
-              widget: object,
-              fields:
-                [
-                  { label: Title, name: title, widget: string },
-                  { label: Description, name: description, widget: text },
-                ],
-            }
-          - { label: Description, name: description, widget: string }
-          - {
               label: Intro,
               name: intro,
               widget: object,
@@ -75,6 +64,7 @@ collections:
                     fields:
                       [
                         { label: Image, name: image, widget: image },
+                        { label: Name, name: name, widget: string },
                         { label: Text, name: text, widget: text },
                       ],
                   },
