--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.4.0",
     "gatsby": "^4.0.0",
+    "gatsby-plugin-google-gtag": "^4.4.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-netlify": "^3.14.0",
     "gatsby-plugin-netlify-cms": "^6.0.0",
