--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,8 @@
   publish = "public"
   command = "npm run build"
 [build.environment]
-  NODE_VERSION = "14.15.0"
+  NODE_VERSION = "18.19.0"
+  NPM_VERSION = "10.2.3"
   YARN_VERSION = "1.22.4"
   YARN_FLAGS = "--no-ignore-optional"
 
