--- a/package.json
+++ b/package.json
@@ -4,32 +4,34 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
-    "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
-    "@tailwindcss/forms": "^0.4.0",
-    "gatsby": "^4.0.0",
-    "gatsby-plugin-google-gtag": "^4.4.0",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-netlify": "^3.14.0",
-    "gatsby-plugin-netlify-cms": "^6.0.0",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-plugin-sitemap": "^5.5.0",
-    "gatsby-remark-copy-linked-files": "^5.0.0",
-    "gatsby-remark-images": "^6.0.0",
-    "gatsby-remark-relative-images": "^0.3.0",
-    "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-transformer-remark": "^5.0.0",
-    "gatsby-transformer-sharp": "^4.0.0",
-    "lodash": "^4.17.15",
-    "lodash-webpack-plugin": "^0.11.4",
-    "netlify-cms-app": "^2.15.63",
-    "prop-types": "^15.6.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-helmet": "^6.0.0",
-    "sass": "^1.43.2",
-    "uuid": "^8.0.0"
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "gatsby": "^5.13.3",
+    "gatsby-cli": "^5.14.0",
+    "gatsby-plugin-google-gtag": "^5.13.1",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-netlify": "^5.1.1",
+    "gatsby-plugin-netlify-cms": "^7.12.1",
+    "gatsby-plugin-react-helmet": "^6.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-remark-copy-linked-files": "^6.13.1",
+    "gatsby-remark-images": "^7.13.1",
+    "gatsby-remark-relative-images": "^2.0.5",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
+    "global": "^4.4.0",
+    "lodash": "^4.17.21",
+    "lodash-webpack-plugin": "^0.11.6",
+    "netlify-cms-app": "^2.15.72",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "sass": "^1.71.1",
+    "uuid": "^9.0.1"
   },
   "keywords": [
     "gatsby"
@@ -40,20 +42,20 @@
     "clean": "gatsby clean",
     "start": "npm run develop",
     "build": "npm run clean && gatsby build",
-    "dev": "npm run clean && gatsby develop",
+    "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.2",
-    "gatsby-plugin-postcss": "^5.4.0",
-    "postcss": "^8.4.5",
-    "prettier": "^2.0.5",
-    "tailwindcss": "^3.0.12"
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.17",
+    "gatsby-plugin-postcss": "^6.13.1",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.1"
   },
   "engines": {
-    "node": ">= 14.15.0"
+    "node": ">= 18.0.0"
   }
 }
