--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,7 @@
 [build]
   publish = "public"
-  command = "npm run build"
+  command = "yarn run build"
 [build.environment]
   NODE_VERSION = "18.19.0"
-  NPM_VERSION = "10.2.3"
-  YARN_VERSION = "1.22.4"
+  YARN_VERSION = "1.22.22"
   YARN_FLAGS = "--no-ignore-optional"
-
-
