--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@tailwindcss/forms": "^0.5.7",
+    "framer-motion": "^12.5.0",
     "gatsby": "^5.13.3",
     "gatsby-cli": "^5.14.0",
     "gatsby-plugin-google-gtag": "^5.13.1",
