--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
+  "name": "kappaml-website",
+  "description": "Kappaml website",
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
@@ -12,8 +12,6 @@
     "gatsby-cli": "^5.14.0",
     "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.13.1",
-    "gatsby-plugin-netlify": "^5.1.1",
-    "gatsby-plugin-netlify-cms": "^7.12.1",
     "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-sitemap": "^6.13.1",
@@ -26,7 +24,6 @@
     "global": "^4.4.0",
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.6",
-    "netlify-cms-app": "^2.15.72",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
